[package]
name = "worker"
version = "0.0.18"
authors = ["Cloudflare Workers Team <workers@cloudflare.com>"]
repository = "https://github.com/cloudflare/workers-rs"
edition = "2018"
keywords = ["serverless", "ffi", "workers", "wasm", "cloudflare"]
license = "Apache-2.0"
description = "A Rust SDK for writing Cloudflare Workers."
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
chrono = { version = "0.4.31", default-features = false, features = [
    "wasmbind",
] }
chrono-tz = { version = "0.8.5", default-features = false }
futures-channel = "0.3.30"
futures-util = { version = "0.3.30", default-features = false }
http = "0.2.9"
js-sys = "0.3.63"
matchit = "0.4.6"
pin-project = "1.1.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.28", default-features = false }
url = "2.5.0"
wasm-bindgen = "=0.2.90"
wasm-bindgen-futures = "0.4.36"
serde-wasm-bindgen = "0.6.1"
serde_urlencoded = "0.7"
wasm-streams = "0.4.0"
worker-kv = "0.6.0"
worker-macros = { path = "../worker-macros", version = "0.0.10" }
worker-sys = { path = "../worker-sys", version = "0.0.10" }

[dependencies.web-sys]
version = "0.3.63"
features = [
    "File",
    "WorkerGlobalScope",
    "ReadableStreamDefaultReader",
    "WritableStreamDefaultWriter",
]

[dependencies.tokio-postgres]
version = "0.7"
default-features = false
features = ["js"]
optional = true

[features]
queue = ["worker-macros/queue", "worker-sys/queue"]
d1 = ["worker-sys/d1"]
